@@ -8,6 +8,8 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Target;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
@@ -126,7 +128,7 @@ public class AnnotationClassLoader implements Closeable {
    * @param checker a {@link BaseTypeChecker} or its subclass
    */
   @SuppressWarnings("signature") // TODO: reduce use of string manipulation
-  public AnnotationClassLoader(final BaseTypeChecker checker) {
+  public AnnotationClassLoader(BaseTypeChecker checker) {
     this.checker = checker;
     processingEnv = checker.getProcessingEnvironment();
 
@@ -197,7 +199,7 @@ public class AnnotationClassLoader implements Closeable {
    * @return a URL to the jar that contains the qual package, or to the qual package's directory, or
    *     null if no jar or directory contains the qual package
    */
-  private final @Nullable URL getURLFromClasspaths() {
+  private @Nullable URL getURLFromClasspaths() {
     // TODO: This method could probably be replaced with
     // io.github.classgraph.ClassGraph#getClasspathURIs()
 
@@ -264,7 +266,7 @@ public class AnnotationClassLoader implements Closeable {
    * @param url a URL referring to either a jar or a directory
    * @return true if the jar or the directory contains the qual package, false otherwise
    */
-  private final boolean containsPackage(final URL url) {
+  private boolean containsPackage(URL url) {
     // see whether the resource URL has a protocol of jar or file
     if (url.getProtocol().equals("jar")) {
       // try to open up the jar file
@@ -295,7 +297,7 @@ public class AnnotationClassLoader implements Closeable {
    * @return true if the jar file contains the qual package, false otherwise
    */
   @SuppressWarnings("JdkObsolete")
-  private final boolean checkJarForPackage(final JarFile jar) {
+  private boolean checkJarForPackage(JarFile jar) {
     Enumeration<JarEntry> jarEntries = jar.entries();
 
     // loop through the entries in the jar
@@ -336,7 +338,7 @@ public class AnnotationClassLoader implements Closeable {
    *     name
    * @return true if the qual package exists within the root directory, false otherwise
    */
-  private final boolean checkDirForPackage(final File currentDir, final Iterator<String> pkgNames) {
+  private boolean checkDirForPackage(File currentDir, Iterator<String> pkgNames) {
     // if the iterator has no more package name segments, then we've found
     // the qual directory of interest
     if (!pkgNames.hasNext()) {
@@ -372,7 +374,7 @@ public class AnnotationClassLoader implements Closeable {
    * @param absolutePathToDirectory an absolute path to a directory
    * @return a URL reference to the directory, or null if the URL is malformed
    */
-  private final @Nullable URL getDirectoryURL(final String absolutePathToDirectory) {
+  private @Nullable URL getDirectoryURL(String absolutePathToDirectory) {
     URL directoryURL = null;
 
     try {
@@ -392,12 +394,12 @@ public class AnnotationClassLoader implements Closeable {
    * @param absolutePathToJarFile an absolute path to a jar file
    * @return a URL reference to the jar file, or null if the URL is malformed
    */
-  private final @Nullable URL getJarURL(final String absolutePathToJarFile) {
+  private @Nullable URL getJarURL(String absolutePathToJarFile) {
     URL jarURL = null;
 
     try {
-      jarURL = new URL("jar:file:" + absolutePathToJarFile + "!/");
-    } catch (MalformedURLException e) {
+      jarURL = new URI("jar:file:" + absolutePathToJarFile + "!/").toURL();
+    } catch (URISyntaxException | MalformedURLException e) {
       processingEnv
           .getMessager()
           .printMessage(Kind.NOTE, "Jar URL " + absolutePathToJarFile + " is malformed");
@@ -423,7 +425,7 @@ public class AnnotationClassLoader implements Closeable {
    *
    * @return an immutable linked hashset of the classpaths
    */
-  private final Set<String> getClasspaths() {
+  private Set<String> getClasspaths() {
     Set<String> paths = new LinkedHashSet<>();
 
     // add all extension paths
@@ -453,7 +455,7 @@ public class AnnotationClassLoader implements Closeable {
    * @return the classloader used to load the checker class, or the system classloader, or null if
    *     both are unavailable
    */
-  private final @Nullable URLClassLoader getClassLoader() {
+  private @Nullable URLClassLoader getClassLoader() {
     ClassLoader result = InternalUtils.getClassLoaderForClass(checker.getClass());
     if (result instanceof URLClassLoader) {
       return (@Nullable URLClassLoader) result;
@@ -588,7 +590,7 @@ public class AnnotationClassLoader implements Closeable {
    * @return a set of fully qualified class names of the annotations
    */
   @SuppressWarnings("JdkObsolete")
-  private final Set<@BinaryName String> getBundledAnnotationNamesFromJar(final JarFile jar) {
+  private Set<@BinaryName String> getBundledAnnotationNamesFromJar(JarFile jar) {
     Set<@BinaryName String> annos = new LinkedHashSet<>();
 
     // get an enumeration iterator for all the content entries in the jar file
@@ -626,7 +628,7 @@ public class AnnotationClassLoader implements Closeable {
    *     {@link #isSupportedAnnotationClass(Class)}
    */
   public final @Nullable Class<? extends Annotation> loadExternalAnnotationClass(
-      final @BinaryName String annoName) {
+      @BinaryName String annoName) {
     return loadAnnotationClass(annoName, true);
   }
 
@@ -638,7 +640,7 @@ public class AnnotationClassLoader implements Closeable {
    * @return a set of annotation classes
    */
   public final Set<Class<? extends Annotation>> loadExternalAnnotationClassesFromDirectory(
-      final String dirName) {
+      String dirName) {
     File rootDirectory = new File(dirName);
     Set<@BinaryName String> annoNames =
         getAnnotationNamesFromDirectory(null, rootDirectory, rootDirectory);
@@ -659,10 +661,10 @@ public class AnnotationClassLoader implements Closeable {
    *     its sub-directories
    */
   @SuppressWarnings("signature") // TODO: reduce use of string manipulation
-  private final Set<@BinaryName String> getAnnotationNamesFromDirectory(
-      final @Nullable @DotSeparatedIdentifiers String packageName,
-      final File rootDirectory,
-      final File currentDirectory) {
+  private Set<@BinaryName String> getAnnotationNamesFromDirectory(
+      @Nullable @DotSeparatedIdentifiers String packageName,
+      File rootDirectory,
+      File currentDirectory) {
     Set<@BinaryName String> results = new LinkedHashSet<>();
 
     // Full path to root directory
@@ -670,14 +672,10 @@ public class AnnotationClassLoader implements Closeable {
 
     // check every file and directory within the current directory
     File[] directoryContents = currentDirectory.listFiles();
-    Arrays.sort(
-        directoryContents,
-        new Comparator<File>() {
-          @Override
-          public int compare(File o1, File o2) {
-            return o1.getName().compareTo(o2.getName());
-          }
-        });
+    if (directoryContents == null) {
+      throw new UserError("Directory does not exist: %s", currentDirectory);
+    }
+    Arrays.sort(directoryContents, Comparator.comparing(File::getName));
     for (File file : directoryContents) {
       if (file.isFile()) {
         // TODO: simplify all this string manipulation.
@@ -734,7 +732,7 @@ public class AnnotationClassLoader implements Closeable {
    *     is not supported by a checker, null is returned.
    */
   protected final @Nullable Class<? extends Annotation> loadAnnotationClass(
-      final @BinaryName String className, boolean issueError) {
+      @BinaryName String className, boolean issueError) {
 
     // load the class
     Class<?> cls = null;
@@ -799,7 +797,7 @@ public class AnnotationClassLoader implements Closeable {
    * @see #loadAnnotationClass(String, boolean)
    */
   protected final Set<Class<? extends Annotation>> loadAnnotationClasses(
-      final @Nullable Set<@BinaryName String> annoNames) {
+      @Nullable Set<@BinaryName String> annoNames) {
     Set<Class<? extends Annotation>> loadedClasses = new LinkedHashSet<>();
 
     if (annoNames != null && !annoNames.isEmpty()) {
@@ -826,8 +824,7 @@ public class AnnotationClassLoader implements Closeable {
    * @param annoClass an annotation class
    * @return true if the annotation is well defined, false if it isn't
    */
-  protected boolean hasWellDefinedTargetMetaAnnotation(
-      final Class<? extends Annotation> annoClass) {
+  protected boolean hasWellDefinedTargetMetaAnnotation(Class<? extends Annotation> annoClass) {
     return annoClass.getAnnotation(Target.class) != null
         && AnnotationUtils.hasTypeQualifierElementTypes(
             annoClass.getAnnotation(Target.class).value(), annoClass);
@@ -845,7 +842,7 @@ public class AnnotationClassLoader implements Closeable {
    * @param annoClass an annotation class
    * @return true if the annotation is supported, false if it isn't
    */
-  protected boolean isSupportedAnnotationClass(final Class<? extends Annotation> annoClass) {
+  protected boolean isSupportedAnnotationClass(Class<? extends Annotation> annoClass) {
     return true;
   }
 }
